<resources>
    <string name="app_name">SIMPAY</string>
    <string name="airtime">Airtime</string>
    <string name="internet">Internet</string>
    <string name="tv">TV</string>
    <string name="m_money">Mobile Money</string>
    <string name="lotto">Lotto</string>
    <string name="title_home">Home</string>
    <string name="sales">Sales</string>
    <string name="settings">Settings</string>
    <string name="utilities">Utilities</string>
    <string name="dashboard">Dashboard</string>
    <string name="next">Next</string>
    <string name="enterPhone">Enter Phone Number</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
